apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_ant_ffi_fn_constructor_client_init(void
    
);
uint64_t uniffi_ant_ffi_fn_constructor_client_init_local(void
    
);
void uniffi_ant_ffi_fn_free_graphentry(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_graphentry_new(void*_Nonnull owner, RustBuffer parents, RustBuffer content, RustBuffer descendants, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_graphentry_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_graphentry_content(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_graphentry_descendants(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_graphentry_parents(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_graphentryaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_graphentryaddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_graphentryaddress_new(void*_Nonnull public_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_graphentryaddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_network(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_network_custom(RustBuffer rpc_url, RustBuffer payment_token_address, RustBuffer data_payments_address, RustBuffer royalties_pk_hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_network_new(int8_t is_local, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_networkpointer(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_registeraddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_registeraddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_registeraddress_new(void*_Nonnull owner, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_registeraddress_owner(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_registeraddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_scratchpad(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_scratchpad_new(void*_Nonnull owner, uint64_t data_encoding, RustBuffer unencrypted_data, uint64_t counter, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_scratchpad_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_scratchpad_counter(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_scratchpad_data_encoding(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_scratchpad_decrypt_data(void*_Nonnull ptr, void*_Nonnull sk, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_scratchpad_encrypted_data(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_scratchpad_owner(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_scratchpadaddress(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_scratchpadaddress_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_scratchpadaddress_new(void*_Nonnull public_key, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_method_scratchpadaddress_owner(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_scratchpadaddress_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_userdata(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_userdata_new(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_ant_ffi_fn_method_userdata_file_archives(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_userdata_private_file_archives(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_vaultsecretkey(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_vaultsecretkey_from_hex(RustBuffer hex, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_vaultsecretkey_random(RustCallStatus *_Nonnull out_status
    
);
RustBuffer uniffi_ant_ffi_fn_method_vaultsecretkey_to_hex(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_ant_ffi_fn_free_wallet(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_ant_ffi_fn_constructor_wallet_new_from_private_key(void*_Nonnull network, RustBuffer private_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_method_wallet_address(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_wallet_balance_of_tokens(void*_Nonnull ptr
);
void*_Nonnull uniffi_ant_ffi_fn_func_register_key_from_name(void*_Nonnull owner, RustBuffer name, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_ant_ffi_fn_func_register_value_from_bytes(RustBuffer bytes, RustCallStatus *_Nonnull out_status
);