csharp/AntFfi/Native/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_networkpointer")]
    public static extern void FreeNetworkPointer(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Scratchpad - ScratchpadAddress

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_scratchpadaddress_new")]
    public static extern IntPtr ScratchpadAddressNew(IntPtr publicKey, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_scratchpadaddress_from_hex")]
    public static extern IntPtr ScratchpadAddressFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_scratchpadaddress_owner")]
    public static extern IntPtr ScratchpadAddressOwner(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_scratchpadaddress_to_hex")]
    public static extern void ScratchpadAddressToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_scratchpadaddress")]
    public static extern void FreeScratchpadAddress(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Scratchpad - Scratchpad

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_scratchpad_new")]
    public static extern IntPtr ScratchpadNew(IntPtr owner, ulong dataEncoding, RustBuffer data, ulong counter, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_scratchpad_address")]
    public static extern IntPtr ScratchpadAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_scratchpad_data_encoding")]
    public static extern ulong ScratchpadDataEncoding(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_scratchpad_counter")]
    public static extern ulong ScratchpadCounter(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_scratchpad_decrypt_data")]
    public static extern void ScratchpadDecryptData(out RustBuffer result, IntPtr ptr, IntPtr secretKey, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_scratchpad_owner")]
    public static extern IntPtr ScratchpadOwner(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_scratchpad_encrypted_data")]
    public static extern void ScratchpadEncryptedData(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_scratchpad")]
    public static extern void FreeScratchpad(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Register - RegisterAddress

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_registeraddress_new")]
    public static extern IntPtr RegisterAddressNew(IntPtr owner, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_registeraddress_from_hex")]
    public static extern IntPtr RegisterAddressFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_registeraddress_owner")]
    public static extern IntPtr RegisterAddressOwner(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_registeraddress_to_hex")]
    public static extern void RegisterAddressToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_registeraddress")]
    public static extern void FreeRegisterAddress(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Register - Functions

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_func_register_key_from_name")]
    public static extern IntPtr RegisterKeyFromName(IntPtr owner, RustBuffer name, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_func_register_value_from_bytes")]
    public static extern RustBuffer RegisterValueFromBytes(RustBuffer bytes, ref RustCallStatus status);

    #endregion

    #region GraphEntry - GraphEntryAddress

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_graphentryaddress_new")]
    public static extern IntPtr GraphEntryAddressNew(IntPtr publicKey, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_graphentryaddress_from_hex")]
    public static extern IntPtr GraphEntryAddressFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_graphentryaddress_to_hex")]
    public static extern void GraphEntryAddressToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_graphentryaddress")]
    public static extern void FreeGraphEntryAddress(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region GraphEntry - GraphEntry

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_graphentry_new")]
    public static extern IntPtr GraphEntryNew(IntPtr owner, RustBuffer parents, RustBuffer content, RustBuffer descendants, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_graphentry_address")]
    public static extern IntPtr GraphEntryAddress(IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_graphentry_content")]
    public static extern void GraphEntryContent(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_graphentry_parents")]
    public static extern void GraphEntryParents(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_graphentry_descendants")]
    public static extern void GraphEntryDescendants(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_graphentry")]
    public static extern void FreeGraphEntry(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Vault - VaultSecretKey

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_vaultsecretkey_random")]
    public static extern IntPtr VaultSecretKeyRandom(ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_vaultsecretkey_from_hex")]
    public static extern IntPtr VaultSecretKeyFromHex(RustBuffer hex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_vaultsecretkey_to_hex")]
    public static extern void VaultSecretKeyToHex(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_vaultsecretkey")]
    public static extern void FreeVaultSecretKey(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Vault - UserData

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_userdata_new")]
    public static extern IntPtr UserDataNew(ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_userdata_file_archives")]
    public static extern void UserDataFileArchives(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_userdata_private_file_archives")]
    public static extern void UserDataPrivateFileArchives(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_userdata")]
    public static extern void FreeUserData(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Network

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_network_new")]
    public static extern IntPtr NetworkNew(sbyte isLocal, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_network_custom")]
    public static extern IntPtr NetworkCustom(RustBuffer rpcUrl, RustBuffer paymentTokenAddress, RustBuffer dataPaymentsAddress, RustBuffer royaltiesPkHex, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_network")]
    public static extern void FreeNetwork(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Wallet

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_wallet_new_from_private_key")]
    public static extern IntPtr WalletFromPrivateKey(IntPtr network, RustBuffer privateKey, ref RustCallStatus status);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_wallet_address")]
    public static extern void WalletAddress(out RustBuffer result, IntPtr ptr, ref RustCallStatus status);

    /// <summary>
    /// Async: Returns a future handle for balance_of_tokens.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_wallet_balance_of_tokens")]
    public static extern ulong WalletBalanceOfTokens(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_wallet")]
    public static extern void FreeWallet(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Client - Constructors (Async)

    /// <summary>
    /// Async: Returns a future handle for client initialization with a network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_client_init")]
    public static extern ulong ClientInit();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_constructor_client_init_local")]
    public static extern ulong ClientInitLocal();
